@@ -1,5 +1,10 @@
-0034-Beta ReplicatorG
- * Updated t0 to t1 tolerance code 
+0034 UltiReplicatorG
+ * Recognization of M115 commands
+ * Updated t0 to t1 tolerance code
+ * Fixed several problems with reprap5D
+ * Made a new Ultimaker scene
+ * Support for Marlin build 3 & V1
+ * Native Slic3r support
 
 0033 ReplicatorG
 * Updated version number to avoid confusion
